5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1724_2526.log
== TEST (2019-05-14 12:25:01) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
while(i < m):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + i
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:25:22) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
-- OUTPUT:
2620
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:28:56) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) or (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
2620
5544
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:29:30) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) or (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:29:41) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) or (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.198735
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
1158
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
153
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
33432
66928
AMIGOS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:30:11) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) or (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:30:48) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.157253
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
1158
2620
NAO AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
153
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
33432
66928
NAO AMIGOS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:30:49) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:31:20) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
5544
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:31:49) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:31:53) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.141307
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
1158
2620
NAO AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
153
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
33432
66928
NAO AMIGOS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:32:00) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:32:21) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:32:48) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + d
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
55
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:34:48) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i < m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:36:26) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i <= m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 < n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- OUTPUT:
1158
2620
NAO AMIGOS
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:39:12) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i <= m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
#i2 = 0
#d2 = 0
#soma2 = 0
#while(i2 <= n/2):
#	i2 = i2 + 1
#	if((n%i2) == 0):
#		d2 = d2 + 1
#		soma2 = soma2 + i2
#print(soma2)
#if((soma == n) and (soma2 == m)):
#	print("AMIGOS")
#else:
#	print("NAO AMIGOS")
-- OUTPUT:
1158
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:39:31) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i <= m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
#i2 = 0
#d2 = 0
#soma2 = 0
#while(i2 <= n/2):
#	i2 = i2 + 1
#	if((n%i2) == 0):
#		d2 = d2 + 1
#		soma2 = soma2 + i2
#print(soma2)
#if((soma == n) and (soma2 == m)):
#	print("AMIGOS")
#else:
#	print("NAO AMIGOS")
-- OUTPUT:
1158
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:39:41) 
-- CODE:
m = int(input("Insira: "))
#n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i <= m/2):
	i = i + 1
	if((n%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
#i2 = 0
#d2 = 0
#soma2 = 0
#while(i2 <= n/2):
#	i2 = i2 + 1
#	if((n%i2) == 0):
#		d2 = d2 + 1
#		soma2 = soma2 + i2
#print(soma2)
#if((soma == n) and (soma2 == m)):
#	print("AMIGOS")
#else:
#	print("NAO AMIGOS")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    if((n%i) == 0):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:39:52) 
-- CODE:
m = int(input("Insira: "))
#n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i <= m/2):
	i = i + 1
	if((m%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
#i2 = 0
#d2 = 0
#soma2 = 0
#while(i2 <= n/2):
#	i2 = i2 + 1
#	if((n%i2) == 0):
#		d2 = d2 + 1
#		soma2 = soma2 + i2
#print(soma2)
#if((soma == n) and (soma2 == m)):
#	print("AMIGOS")
#else:
#	print("NAO AMIGOS")
-- OUTPUT:
2924
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:40:31) 
-- CODE:
m = int(input("Insira: "))
n = int(input("Insira: "))

i = 0
d = 0
soma = 0
while(i <= m/2):
	i = i + 1
	if((m%i) == 0):
		d = d + 1
		soma = soma + i
print(soma)
i2 = 0
d2 = 0
soma2 = 0
while(i2 <= n/2):
	i2 = i2 + 1
	if((n%i2) == 0):
		d2 = d2 + 1
		soma2 = soma2 + i2
print(soma2)
if((soma == n) and (soma2 == m)):
	print("AMIGOS")
else:
	print("NAO AMIGOS")
-- EXECUTION TIME:
0.140192
-- TEST CASE 1:
---- input:
2620
2924
---- correct output:
2924
2620
AMIGOS
---- user output:
2924
2620
AMIGOS
-- TEST CASE 2:
---- input:
220
282
---- correct output:
284
294
NAO AMIGOS
---- user output:
284
294
NAO AMIGOS
-- TEST CASE 3:
---- input:
66928
66992
---- correct output:
66992
66928
AMIGOS
---- user output:
66992
66928
AMIGOS
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
